--- a/functions/src/views/index.ejs
+++ b/functions/src/views/index.ejs
@@ -1,7 +1,19 @@
 <html>
 <%- include('head') -%>
 <body>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Embed 🐘 timeline</h1>
+            <p>This is a simple tool that let's you embed your mastodon profile in your website. It exposes the public timeline of any user from any instance.</p>
+        </div>
+    </div>
+    <div class="row example-timeline">
+        <div class="col-xs-12 col-md-4 col-xl-2">
+            <iframe src="http://127.0.0.1:5002/drapergiggs/mastodon.social" height="560"></iframe>
+        </div>
+    </div>
+</div>
 <%- include('footer') -%>
 </body>
 </html>
