Adds shadow to show delimiter

--- a/functions/lib/views/index.ejs
+++ b/functions/lib/views/index.ejs
@@ -8,9 +8,9 @@
             <p>This is a simple tool that let's you embed your mastodon profile in your website. It exposes the public timeline of any user from any instance.</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row example-timeline">
         <div class="col-xs-12 col-md-4 col-xl-2">
-            <iframe src="http://127.0.0.1:5002/drapergiggs/mastodon.social" height="760"></iframe>
+            <iframe src="<%= url %>/drapergiggs/mastodon.social" height="560"></iframe>
         </div>
     </div>
 </div>
