--- a/functions/src/views/index.ejs
+++ b/functions/src/views/index.ejs
@@ -10,7 +10,7 @@
     </div>
     <div class="row example-timeline">
         <div class="col-xs-12 col-md-4 col-xl-2">
-            <iframe src="http://127.0.0.1:5002/drapergiggs/mastodon.social" height="560"></iframe>
+            <iframe src="<%= url %>/drapergiggs/mastodon.social" height="560"></iframe>
         </div>
     </div>
 </div>
