--- a/functions/src/public/styles.css
+++ b/functions/src/public/styles.css
@@ -26,3 +26,27 @@ h1 {
 .list-group-item+.list-group-item {
     border-top-width: 1px !important;
 }
+
+#top-shadow {
+    width: 100%;
+    position: fixed;
+    height: 32px;
+    z-index: 30000;
+    top: 0;
+    -webkit-box-shadow: inset 0px 5px 5px 0px rgba(0,0,0,0.35);
+    -moz-box-shadow: inset 0px 5px 5px 0px rgba(0,0,0,0.35);
+    box-shadow: inset 0px 5px 5px 0px rgba(0,0,0,0.35);
+    transition: opacity 0.2s ease-in-out;
+}
+
+#bottom-shadow {
+    width: 100%;
+    position: fixed;
+    height: 32px;
+    z-index: 30000;
+    bottom: 0;
+    -webkit-box-shadow: inset 0px -5px 5px 0px rgba(0,0,0,0.35);
+    -moz-box-shadow: inset 0px -5px 5px 0px rgba(0,0,0,0.35);
+    box-shadow: inset 0px -5px 5px 0px rgba(0,0,0,0.35);
+    transition: opacity 0.2s ease-in-out;
+}
