--- a/functions/src/views/timeline.ejs
+++ b/functions/src/views/timeline.ejs
@@ -3,6 +3,7 @@
     <body>
         <div class="container-fluid">
             <div class="row">
+                <div id="top-shadow" style="opacity: 0"></div>
                 <div class="col-12 p-1">
                     <div class="list-group d-grid gap-1 border-0 w-auto">
                         <% for(var i=0; i < statuses.length; i++) { %>
@@ -15,8 +16,33 @@
                         <% } %>
                     </div>
                 </div>
+                <div id="bottom-shadow" style="opacity: 1;"></div>
             </div>
         </div>
+        <script>
+            function showShadow(shadowPosition) {
+                var el = document.getElementById(shadowPosition+"-shadow");
+                el.style.opacity = "1";
+            }
+
+            function hideShadow(shadowPosition) {
+                var el = document.getElementById(shadowPosition+"-shadow");
+                el.style.opacity = "0";
+            }
+
+            window.onscroll = function(e) {
+                var scrollCount = window.scrollY;
+
+                if (scrollCount === 0) {
+                    hideShadow("top")
+                } else if (scrollCount + window.innerHeight === document.documentElement.offsetHeight) {
+                    hideShadow("bottom")
+                } else {
+                    showShadow("top")
+                    showShadow("bottom")
+                }
+            }
+        </script>
         <%- include('footer') -%>
     </body>
 </html>
