--- a/functions/lib/views/timeline.ejs
+++ b/functions/lib/views/timeline.ejs
@@ -1,11 +1,12 @@
 <html>
     <%- include('head') -%>
-    <body>
+    <body style="background-color: <%- color %>">
         <div class="container-fluid">
             <div class="row">
                 <div id="top-shadow" style="opacity: 0"></div>
                 <div class="col-12 p-1">
-                    <div class="list-group d-grid gap-1 border-0 w-auto">
+                    <h2 style="color: <%- titleColor %>">🐘 <%= username %> toots</h2>
+                    <div class="list-group border-0 rounded-3 w-auto">
                         <% for(var i=0; i < statuses.length; i++) { %>
                             <% if(!statuses[i].reblog) {
                                 %><%-include('status', {status: statuses[i], isReblog: false})-%>
@@ -34,16 +35,18 @@
                 var scrollCount = window.scrollY;
 
                 if (scrollCount === 0) {
-                    console.log('hide top shadow')
                     hideShadow("top")
                 } else if (scrollCount + window.innerHeight === document.documentElement.offsetHeight) {
-                    console.log('hide bottom shadow')
                     hideShadow("bottom")
                 } else {
-                    console.log('show both')
                     showShadow("top")
                     showShadow("bottom")
                 }
+            }
+        </script>
+        <script>
+            goTo = function(url) {
+                window.open(url, '_blank');
             }
         </script>
         <%- include('footer') -%>
