--- a/functions/src/views/status.ejs
+++ b/functions/src/views/status.ejs
@@ -1,14 +1,16 @@
-<div class="list-group-item rounded-3 py-3">
+<div onclick="goTo('<%= status.url %>')" class="list-group-item list-group-item-action w-100">
     <% if (isReblog) {%>
         <small><%= username %> re-posted:</small>
     <%}%>
-    <div class="d-flex gap-3">
+    <div class="d-flex gap-3 py-3">
         <img class="rounded float-start" src="<%= status.account.avatar %>" height="50" width="50"/>
         <div class="d-flex gap-2 w-100 justify-content-between">
             <div class="d-flex flex-column gap-2 w-100 justify-content-between">
-                <a href="<%= status.account.url %>" target="_blank">
-                    <h6 class="mb-0"><%= status.account.display_name %></h6>
-                </a>
+                <h6 class="mb-0">
+                    <a onclick="event.stopPropagation();" href="<%= status.account.url %>" target="_blank">
+                        <%= status.account.display_name %>
+                    </a>
+                </h6>
                 <small><%= status.account.username %></small>
             </div>
         </div>
@@ -17,11 +19,41 @@
         <div class="d-flex gap-2 w-100 justify-content-between">
             <div>
                 <div><%- status.content %></div>
+                <%const attachments = status["media_attachments"];%>
+                <% if (attachments.length > 0) {%>
+                    <div class="d-flex gap-3 py-3">
+                        <div class="d-flex gap-2 w-100 justify-content-between">
+                            <% if (attachments.length === 1) {%>
+                                <div class="single-image">
+                                    <img src="<%= attachments[0]["preview_url"] %>">
+                                </div>
+                            <%} else { %>
+                            <div class="image-grid">
+                                <%for(let i = 0; i < attachments.length; i++){%>
+                                    <div class="image-grid__item">
+                                        <div class="custom-placeholder" style="background-image: url('<%= attachments[i]["preview_url"] %>')">
+                                        </div>
+                                    </div>
+                                <%}%>
+                            </div>
+                            <%}%>
+                        </div>
+                    </div>
+                <%}%>
                 <small>
-                    <a href="<%= status.url %>" target="_blank">
-                        <%= new Date(status.created_at)
-                                .toLocaleDateString(undefined, { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit' })
-                        %>
+                    <% const date = new Date(status.created_at)
+                            .toLocaleDateString(
+                                undefined,
+                                {
+                                    weekday: 'long',
+                                    year: 'numeric',
+                                    month: 'long',
+                                    day: 'numeric',
+                                    hour: '2-digit',
+                                    minute: '2-digit'
+                                }) %>
+                    <a onclick="event.stopPropagation();" href="<%= status.url %>" target="_blank">
+                        <%= date %>
                     </a>
                 </small>
             </div>
